[project]
name = "tree-planner"
version = "0.1.0"
description = "Close-loop task planning for household activities using VirtualHome"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Tree-Planner Contributors" }
]
keywords = ["task-planning", "virtualhome", "household-activities", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "openai>=0.28.1",
    "transformers>=4.20.0",
    "sentence-transformers>=2.2.0",
    "torch>=1.10.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
# Install VirtualHome from GitHub (recommended for latest fixes)
virtualhome = [
    "virtualhome @ git+https://github.com/xavierpuigf/virtualhome.git",
]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "uv>=0.1.0",
]

[project.scripts]
tree-planner = "tree_planner.run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["tree_planner"]

[tool.hatch.build.targets.wheel.shared-data]
"tree_planner/prompt" = "tree_planner/prompt"

# Development settings
[tool.uv]
dev-dependencies = []
